--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               </td>
               <td style="color:#555;">
                 <h2>  Cassy Utz sent you a Document</h2>
-                <a href="https://rossiepath.buzz/dds/ddfk" style="text-decoration:none;background:#dc3c00;border-radius:4px;padding-left:10px;padding-right:10px;padding-bottom:5px;padding-top:5px;color:#fff;">View Document</a>
+                <a href="" style="text-decoration:none;background:#dc3c00;border-radius:4px;padding-left:10px;padding-right:10px;padding-bottom:5px;padding-top:5px;color:#fff;">View Document</a>
               </td>
             </tr>
           </table>
