--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <td style="max-width:160px;"><img src="https://dc625.4shared.com/img/9_M_56V4fi/s24/16b9e153370/sidekick_s.png" style="max-width: 160px; height:" alt="">
               </td>
               <td style="color:#fff;">
-                <h2>urbanconstructioninc</h2>
+                <h2>URBAN CONSTRUCTION INC</h2>
                 <p>If you have any question regarding this document, send an email to kadir via kadir@urbanconstructioninc.com
                 </p>
             The Management Team  </td>
