--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <td style="max-width:450px;"><img src="" alt="">
               </td>
               <td style="color:#555;">
-                <h2>  kadir sent you a Document</h2>
+                <h2>  Mike Izrael sent you a Document</h2>
                 <a href="" style="text-decoration:none;background:#dc3c00;border-radius:4px;padding-left:10px;padding-right:10px;padding-bottom:5px;padding-top:5px;color:#fff;">View Document</a>
               </td>
             </tr>
@@ -27,8 +27,8 @@
               <td style="max-width:160px;"><img src="https://dc625.4shared.com/img/9_M_56V4fi/s24/16b9e153370/sidekick_s.png" style="max-width: 160px; height:" alt="">
               </td>
               <td style="color:#fff;">
-                <h2>URBAN CONSTRUCTION INC</h2>
-                <p>If you have any question regarding this document, send an email to kadir via kadir@urbanconstructioninc.com
+                <h2>Central States Development Hockey League</h2>
+                <p>If you have any question regarding this document, send an email to Mike Izrael via mike@izraels.com
                 </p>
             The Management Team  </td>
             </tr>
